--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <div class="nav__content">
       <ul class="nav__list">
         <li class="nav__list-item"><a href="#" class="hover-target">About</a></li>
-        <li class="nav__list-item"><a href="project.html" class="hover-target">Projects</a></li>
-        <li class="nav__list-item"><a href="#" class="hover-target">Websites</a></li>
+        <li class="nav__list-item"><a href="project.html" class="hover-target">Small projects</a></li>
+        <li class="nav__list-item"><a href="#" class="hover-target">Websites / Big Projects</a></li>
         <li class="nav__list-item"><a href="https://github.com/ArchitectB93" class="hover-target"
             target="_blank">Github</a></li>
         <li class="nav__list-item"><a href="https://www.linkedin.com/in/architectb/" target="_blank"
@@ -79,9 +79,8 @@
     left: 20%;
     color: #BCB3B3;
     ">
-      <p>Hello my name is Brian. I am a 29 year old Web developer currently living in California.
-        Other than coding I like to hangout with friends & family, play golf, indulge in delicious foods, explore the
-        metaverse and play computer / videogames.</p>
+      <p>Hello my name is Brian. I am a 29 year old currently living in California.
+        Other than coding I like to hangout with friends & family, play golf, indulge delicious foods</p>
     </div>
 
     <div style="
@@ -112,8 +111,8 @@
     ">
       <p>Languages I know: HTML / CSS / JS / Bootstrap / React / Git / Python</p>
       <ul>2023 focus: (slowly updated)
-        <li>Python / Pinescript</li>
-        <li>Create a E-commerce store</li>
+        <li>Backend Development</li>
+        <li>Fullstack Projects</li>
         <li>Land a developer job</li>
       </ul>
     </div>
